# auth-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  u.txt
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/routers/: auth_router.py  camera_router.py  order_router.py  setting_router.py  user_router.py
app/core/: auth_middleware.py  config.py  docs_utils.py  logger.py  openapi_config.py  router_loader.py  security.py  settings.toml
app/crud/: __init__.py  base.py  camera_crud.py  order_crud.py  setting_crud.py  user_crud.py
app/db/: base.py  models.py  schemas.py  session.py
app/db/migrations/: init.sql  sample.sql
app/docs/: openapi_overrides.py  swagger_style.css
app/services/: __init__.py  camera_management_service.py  camera_service.py  order_service.py  user_service.py
app/tests/: conftest.py  test_auth.py  test_cameras.py  test_orders.py  test_users.py
app/utils/: __init__.py  filters.py  pagination.py  response.py  time_utils.py
client/browser/: index.html
scripts/: check_db.py  load_sample.sh  reset_db.sh  run_dev.sh  run_prod.sh
